testsuite/tests/properties/invalid_eq/bool_node.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = true == node
}
